resolved alignment issues

--- a/src/components/Admin/Admindashboard.css
+++ b/src/components/Admin/Admindashboard.css
@@ -64,8 +64,29 @@
 }
 
 /* Mobile styles - 480px width and below */
-@media only screen and (max-width: 1200px) {
+/* @media only screen and (max-width: 1200px) {
     .admin-dashboard-buttons-row {
         grid-template-columns: 1fr 1fr;
+    }
+} */
+
+/* Tablet styles - 1600px width and below */
+@media only screen and (max-width: 1600px) {
+    .admin-dashboard-buttons-row {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+/* Mobile styles - 1200px width and below */
+@media only screen and (max-width: 1200px) {
+    .admin-dashboard-buttons-row {
+        grid-template-columns: 1fr 1fr ;
+    }
+}
+
+/* Mobile styles - 768px width and below */
+@media only screen and (max-width: 768px) {
+    .admin-dashboard-buttons-row {
+        grid-template-columns: 1fr;
     }
 }
